--- a/blunder/templates/profile.html
+++ b/blunder/templates/profile.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load custom_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,11 +15,10 @@
     <main class="bg-gray-100 bg-opacity-25">
         <div class="lg:w-8/12 lg:mx-auto mb-8">
             <header class="flex flex-wrap items-center p-4 md:py-8">
-                {{profile_picture_path}}
                 <div class="md:w-3/12 md:ml-16">
                     <!-- profile image -->
-                    <img class="w-20 h-20 md:w-40 md:h-40 object-cover rounded-full
-                     border-2 border-pink-600 p-1" src="{% static 'images/profile_picture.jpg' %}" alt="profile">
+                    <img crossorigin="anonymous" class="w-20 h-20 md:w-40 md:h-40 object-cover rounded-full
+                     border-2 border-pink-600 p-1" src="{{profile_picture}}" alt="profile">
                 </div>
 
                 <!-- profile meta -->
@@ -116,171 +116,36 @@
                 </ul>
                 <!-- flexbox grid -->
                 <div class="flex flex-wrap -mx-px md:-mx-3">
-
                     <!-- column -->
-                    <div class="w-1/3 p-px md:px-3">
-                        <!-- post 1-->
-                        <a href="#">
-                            <article class="post bg-gray-100 text-white relative pb-full md:mb-6">
-                                <!-- post images-->
-                                <img class="w-full h-full absolute left-0 top-0 object-cover" src="images/demo.png"
-                                    alt="image">
+                    {% if edges %}
+                        {% for edge in edges %}
+                            <div class="w-1/3 p-px md:px-3">
+                                <article class="post bg-gray-100 text-white relative pb-full md:mb-6">
+                                    <!-- post images-->
+                                    <img crossorigin="anonymous" class="w-full h-full absolute left-0 top-0 object-cover" src="{{edge.node.thumbnail_src}}"
+                                        alt="image">
 
-                                <i class="fas fa-square absolute right-0 top-0 m-1"></i>
-                                <!-- overlay-->
-                                <div class="overlay bg-gray-800 bg-opacity-25 w-full h-full absolute
-                                left-0 top-0 hidden">
-                                    <div class="flex justify-center items-center
-                                    space-x-4 h-full">
-                                        <span class="p-2">
-                                            <i class="fas fa-heart"></i>
-                                            412K
-                                        </span>
+                                    <img class=" absolute right-0 top-0 m-1" src="{% static 'images/icons/stack.svg' %}" width="17px" height="10px" alt="Logo">
+                                    <!-- overlay-->
+                                    <div class="overlay bg-gray-800 bg-opacity-25 w-full h-full absolute
+                                    left-0 top-0 hidden">
+                                        <div class="flex justify-center items-center
+                                        space-x-4 h-full">
+                                            <span class="p-2 flex justify-center items-end">
+                                                <img src="{% static 'images/icons/like.svg' %}" width="23px" alt="Logo" style="margin-right: 5px;">
+                                                {{edge.node.edge_liked_by.count|format_number}}
+                                            </span>
 
-                                        <span class="p-2">
-                                            <i class="fas fa-comment"></i>
-                                            2,909
-                                        </span>
+                                            <span class="p-2 flex justify-center items-end">
+                                                <img src="{% static 'images/icons/comment.svg' %}" width="18px" alt="Logo" style="margin-right: 5px;">
+                                                {{edge.node.edge_media_to_comment.count|format_number}}
+                                            </span>
+                                        </div>
                                     </div>
-                                </div>
-
-                            </article>
-                        </a>
-                    </div>
-
-                    <div class="w-1/3 p-px md:px-3">
-                        <a href="#">
-                            <!-- post 2 -->
-                            <article class="post bg-gray-100 text-white relative pb-full md:mb-6">
-                                <img class="w-full h-full absolute left-0 top-0 object-cover" src="images/demo1.png"
-                                    alt="image">
-
-                                <!-- overlay-->
-                                <div class="overlay bg-gray-800 bg-opacity-25 w-full h-full absolute
-                                left-0 top-0 hidden">
-                                    <div class="flex justify-center items-center
-                                    space-x-4 h-full">
-                                        <span class="p-2">
-                                            <i class="fas fa-heart"></i>
-                                            412K
-                                        </span>
-
-                                        <span class="p-2">
-                                            <i class="fas fa-comment"></i>
-                                            1,993
-                                        </span>
-                                    </div>
-                                </div>
-
-                            </article>
-                        </a>
-                    </div>
-
-                    <div class="w-1/3 p-px md:px-3">
-                        <a href="#">
-                            <article class="post bg-gray-100 text-white relative pb-full  md:mb-6">
-                                <img class="w-full h-full absolute left-0 top-0 object-cover" src="images/demo2.png"
-                                    alt="image">
-                                <!-- overlay-->
-                                <div class="overlay bg-gray-800 bg-opacity-25 w-full h-full absolute
-                                left-0 top-0 hidden">
-                                    <div class="flex justify-center items-center
-                                    space-x-4 h-full">
-                                        <span class="p-2">
-                                            <i class="fas fa-heart"></i>
-                                            112K
-                                        </span>
-
-                                        <span class="p-2">
-                                            <i class="fas fa-comment"></i>
-                                            2,090
-                                        </span>
-                                    </div>
-                                </div>
-                            </article>
-                        </a>
-                    </div>
-
-                    <div class="w-1/3 p-px md:px-3">
-                        <a href="#">
-                            <article class="post bg-gray-100 text-white relative pb-full md:mb-6">
-                                <img class="w-full h-full absolute left-0 top-0 object-cover" src="images/demo3.jpg"
-                                    alt="image">
-
-                                <i class="fas fa-video absolute right-0 top-0 m-1"></i>
-
-                                <!-- overlay-->
-                                <div class="overlay bg-gray-800 bg-opacity-25 w-full h-full absolute
-                                left-0 top-0 hidden">
-                                    <div class="flex justify-center items-center
-                                    space-x-4 h-full">
-                                        <span class="p-2">
-                                            <i class="fas fa-heart"></i>
-                                            841K
-                                        </span>
-
-                                        <span class="p-2">
-                                            <i class="fas fa-comment"></i>
-                                            909
-                                        </span>
-                                    </div>
-                                </div>
-
-                            </article>
-                        </a>
-                    </div>
-
-                    <div class="w-1/3 p-px md:px-3">
-                        <a href="#">
-                            <article class="post bg-gray-100 text-white relative pb-full md:mb-6">
-                                <img class="w-full h-full absolute left-0 top-0 object-cover" src="images/demo4.jpg"
-                                    alt="image">
-                                <!-- overlay-->
-                                <div class="overlay bg-gray-800 bg-opacity-25 w-full h-full absolute
-                                left-0 top-0 hidden">
-                                    <div class="flex justify-center items-center
-                                    space-x-4 h-full">
-                                        <span class="p-2">
-                                            <i class="fas fa-heart"></i>
-                                            120K
-                                        </span>
-
-                                        <span class="p-2">
-                                            <i class="fas fa-comment"></i>
-                                            3,909
-                                        </span>
-                                    </div>
-                                </div>
-
-                            </article>
-                        </a>
-                    </div>
-
-                    <div class="w-1/3 p-px md:px-3">
-                        <a href="#">
-                            <article class="post bg-gray-100 text-white relative pb-full md:mb-6">
-                                <img class="w-full h-full absolute left-0 top-0 object-cover" src="images/demo5.webp"
-                                    alt="image">
-                                <!-- overlay-->
-                                <div class="overlay bg-gray-800 bg-opacity-25 w-full h-full absolute
-                                left-0 top-0 hidden">
-                                    <div class="flex justify-center items-center
-                                    space-x-4 h-full">
-                                        <span class="p-2">
-                                            <i class="fas fa-heart"></i>
-                                            160K
-                                        </span>
-
-                                        <span class="p-2">
-                                            <i class="fas fa-comment"></i>
-                                            5,557
-                                        </span>
-                                    </div>
-                                </div>
-
-                            </article>
-                        </a>
-                    </div>
+                                </article>
+                            </div>
+                        {% endfor %}
+                    {% endif %}
                 </div>
             </div>
         </div>
