--- a/blunder/templates/example.html
+++ b/blunder/templates/example.html
@@ -12,6 +12,8 @@
 </head>
 
 <body class="font-custom">
+    {{auth_code}}
+    {{instagram_response}}
     <div id="app">
         <!-- Section: Design Block -->
         <section class="mb-10 overflow-hidden">
@@ -31,6 +33,8 @@
                             </h1>
                             <a class="mb-2 inline-block rounded-full border-2 border-neutral-50 px-[46px] pt-[14px] pb-[12px] text-sm font-medium uppercase leading-normal text-neutral-50 transition duration-150 ease-in-out hover:border-neutral-100 hover:bg-neutral-500 hover:bg-opacity-10 hover:text-neutral-100 focus:border-neutral-100 focus:text-neutral-100 focus:outline-none focus:ring-0 active:border-neutral-200 active:text-neutral-200 md:mr-2 md:mb-0"
                                 data-te-ripple-init data-te-ripple-color="light" href="#!" role="button">Get started</a>
+                            <a class="mb-2 inline-block rounded-full border-2 border-neutral-50 px-[46px] pt-[14px] pb-[12px] text-sm font-medium uppercase leading-normal text-neutral-50 transition duration-150 ease-in-out hover:border-neutral-100 hover:bg-neutral-500 hover:bg-opacity-10 hover:text-neutral-100 focus:border-neutral-100 focus:text-neutral-100 focus:outline-none focus:ring-0 active:border-neutral-200 active:text-neutral-200 md:mr-2 md:mb-0"
+                                data-te-ripple-init data-te-ripple-color="light" href="{% url 'instagram_auth' %}" role="button">Login with Instagram</a>
                             <a class="inline-block rounded-full px-12 pt-4 pb-3.5 text-sm font-medium uppercase leading-normal text-neutral-50 transition duration-150 ease-in-out hover:bg-neutral-500 hover:bg-opacity-20 hover:text-neutral-200 focus:text-neutral-200 focus:outline-none focus:ring-0 active:text-neutral-300"
                                 data-te-ripple-init data-te-ripple-color="light" href="#!" role="button">Learn more</a>
                         </div>
